--- a/index.html
+++ b/index.html
@@ -1,43 +1,66 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Happy Birthday!</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
         }
 
         .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
+            max-width: 600px;
             background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
+            padding: 40px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .container::before {
+            content: "🎂🎈🎉";
+            position: absolute;
+            top: -20px;
+            right: -20px;
+            font-size: 100px;
+            opacity: 0.2;
         }
 
         h1 {
-            text-align: center;
-            color: #333;
+            color: #ff4757;
+            margin-bottom: 20px;
+            font-size: 28px;
+            font-weight: bold;
         }
 
         p {
-            line-height: 1.6;
-            color: #666;
+            color: #555;
+            font-size: 18px;
+            margin-bottom: 30px;
+        }
+
+        .birthday-cake {
+            width: 150px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>TANG INA MO GINO</h1>
-
+    <img src="https://cdn-icons-png.flaticon.com/512/2917/2917995.png" alt="Birthday Cake" class="birthday-cake">
+    <h1>🎂 HAPPY BIRTHDAY MARKJOHN FRANCISCO! 🎂</h1>
+    <p>Wishing you a fantastic day filled with joy, laughter, and of course... CAKE! 🍰</p>
 </div>
 
 </body>
