--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <div class="container">
     <img src="https://cdn-icons-png.flaticon.com/512/2917/2917995.png" alt="Birthday Cake" class="birthday-cake">
-    <h1>🎂 HAPPY BIRTHDAY MARKJOHN FRANCISCO! 🎂</h1>
+    <h1>🎂 HAPPY BIRTHDAY MARKJOHN FRANCISCO OR BURAT NAMIN! 🎂</h1>
     <p>Wishing you a fantastic day filled with joy, laughter, and of course... CAKE! 🍰</p>
 </div>
 
