--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 <body>
 
 <div class="container">
-
-    <img src="smiley.png" alt="User Profile Image">
+<img src="burat.jpg" alt="User Profile Image">
+    <img src="burats.jpg" alt="User Profile Image">
+    <img src="buratss.jpg" alt="User Profile Image">
     <h1>🎂 HAPPY BIRTHDAY MARKJOHN FRANCISCO OR BURAT NAMIN! 🎂</h1>
     <p>Wishing you a fantastic day filled with joy, laughter, and of course... CAKE! 🍰</p>
 </div>
