--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            background: linear-gradient(135deg, #87CEEB, #e0f7fa);
         }
 
         .container {
@@ -28,7 +28,7 @@
         }
 
         .container::before {
-            content: "🎂🎈🎉";
+            content: "🕊️";
             position: absolute;
             top: -20px;
             right: -20px;
@@ -43,7 +43,7 @@
             margin-bottom: 20px;
         }
 
-        .images-container img {
+        .images-container a img {
             width: 80px;
             height: 80px;
             border-radius: 50%;
@@ -69,9 +69,9 @@
 
 <div class="container">
     <div class="images-container">
-        <img src="burat.jpg" alt="User Profile Image">
-        <img src="burats.jpg" alt="User Profile Image">
-        <img src="buratss.jpg" alt="User Profile Image">
+        <a href="burat.jpg" target="_blank"><img src="burat.jpg" alt="User Profile Image"></a>
+        <a href="burats.jpg" target="_blank"><img src="burats.jpg" alt="User Profile Image"></a>
+        <a href="buratss.jpg" target="_blank"><img src="buratss.jpg" alt="User Profile Image"></a>
     </div>
     <h1>🎂 HAPPY BIRTHDAY MARKJOHN FRANCISCO OR BURAT NAMIN! 🎂</h1>
     <p>Wishing you a fantastic day filled with joy, laughter, and of course... CAKE! 🍰</p>
