--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
         <img src="burats.jpg" alt="User Profile Image" onclick="showImage(this.src)">
         <img src="buratss.jpg" alt="User Profile Image" onclick="showImage(this.src)">
     </div>
-    <h1>🎂 HAPPY BIRTHDAY MARKJOHN FRANCISCO OR BURAT NAMIN! 🎂</h1>
-    <p>Wishing you a fantastic day filled with joy, laughter, and of course... CAKE! 🍰</p>
+    <h1>🎂 HAPPY BIRTHDAY MARKJOHN FRANCISCO BURAT NAMIN! 🎂</h1>
+    <p>Wishing you a fantastic day filled with joy, laughter, and of course... CAKE!🍰</p>
+    <p> KISS NAMIN BEBE BOY!!</p>
 </div>
 
 <div class="popup-image" id="popup" onclick="hideImage()">
