--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 </head>
 <body>
     <h1>You're Gay</h1>
-    <img src="https://placekitten.com/300/300" alt="Cute Cat">
+    <img src="catmeme.jpg" alt="Cute Cat">
 </body>
 </html>
