--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     </style>
 </head>
 <body>
-    <h1>You're Gay</h1>
+    <h1>john micheal corpuz ay bayot at tumitira ng bisaya</h1>
     <img src="catmeme.jpg" alt="Cute Cat">
 </body>
 </html>
+
